Attempt to fix background-image on mobile.

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ nav {
     width: 100%;
     background-color: #333;
     display: inline-block;
+    position: fixed;
     overflow: hidden;
     text-align: center;
     z-index: 10000;
@@ -487,10 +488,6 @@ input[type=submit]:hover {
     nav a:first-child {
         float: left;
         display: block;
-    }
-
-    nav {
-        position: fixed;
     }
 
     nav a.icon {
